Improve display of LinkURL menu and fix spacing. (#33652)
* Improve display of LinkURL menu and fix spacing.
* Fix rendering of site icon in link preview.

--- a/packages/block-editor/src/components/link-control/style.scss
+++ b/packages/block-editor/src/components/link-control/style.scss
@@ -184,13 +184,14 @@ $preview-image-height: 140px;
 		position: relative;
 		top: 0.2em;
 		margin-right: $grid-unit-10;
-		width: 18px; // half of 32px to improve perceived resolution.
-		height: 18px; // half of 32px to improve perceived resolution.
+		max-height: 24px;
+		flex-shrink: 0;
+		width: 24px;
+		display: flex;
+		justify-content: center;
 
-		svg,
 		img {
-			max-width: none;
-			width: 18px; // half of 32px to improve perceived resolution.
+			width: 16px; // favicons often have a source of 32px
 		}
 	}
 
@@ -384,7 +385,7 @@ $preview-image-height: 140px;
 	align-items: center;
 	border-top: $border-width solid $gray-300;
 	margin: 0;
-	padding: $grid-unit-20 $grid-unit-30;
+	padding: $grid-unit-20;
 }
 
 .block-editor-link-control__unlink {
